# RawToHdrAndroid

./: .gitignore  BUILD.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/engine/: Common.h  HdrEngine.h  HdrSynthesis.h  ImageAligner.h  ToneMapper.h
app/src/main/cpp/include/io/: HdrWriter.h  LibRawDecoder.h  Png10BitWriter.h
app/src/main/cpp/libraw/include/libraw/: libraw.h
app/src/main/cpp/src/engine/: HdrEngine.cpp  HdrSynthesis.cpp  ImageAligner.cpp  ToneMapper.cpp
app/src/main/cpp/src/io/: HdrWriter.cpp  LibRawDecoder.cpp  Png10BitWriter.cpp
app/src/main/cpp/src/jni/: JniInterface.cpp
app/src/main/java/com/rawtohdr/rawtohdr/: BracketConvertActivity.kt  MainActivity.kt  RawToHdrApplication.kt  SingleConvertActivity.kt
app/src/main/java/com/rawtohdr/rawtohdr/converter/: BracketHDrConverter.kt  ConversionResult.kt  NativeHdrEngine.kt  SingleRawConverter.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_bracket_convert.xml  activity_main.xml  activity_single_convert.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
